# esp-aws-iot

./: .gitmodules  MigrationGuide_IDF4_to_IDF5.md  README.md
examples/fleet_provisioning/fleet_provisioning_with_csr/main/: mqtt_operations.c
examples/jobs/main/: mqtt_demo_helpers.c
examples/ota/: README.md
examples/ota/ota_http/: CMakeLists.txt  sdkconfig.defaults.esp32c2
examples/ota/ota_http/main/: ota_demo_core_http.c
examples/ota/ota_mqtt/: CMakeLists.txt
examples/ota/ota_mqtt/main/: ota_demo_core_mqtt.c
examples/thing_shadow/main/: shadow_demo_helpers.c
libraries/aws-iot-core-mqtt-file-streams-embedded-c/: CMakeLists.txt  Kconfig
libraries/aws-iot-core-mqtt-file-streams-embedded-c/config/: ota_config.h
libraries/aws-iot-core-mqtt-file-streams-embedded-c/port/: ota_os_freertos.c  ota_os_freertos.h  ota_pal.c  ota_pal.h
libraries/coreMQTT-Agent/config/: core_mqtt_agent_config.h
libraries/coreMQTT-Agent/port/: freertos_command_pool.c
libraries/coreMQTT/port/network_transport/: network_transport.c
